baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_type_missing_throws/baml_tests__diagnostic_errors__function_type_missing_throws__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Holder {
  cb: (value: int) -> int
  opt_cb: (value: int) -> int?
}
type user.Alias = (x: int) -> int
function user.lambda_param() -> int  [expr] {
  { let apply = (f: (value: int) -> int, x: int) -> int { {  } f(x) } } apply((value: int) -> int { {  } value }, 1)
}
function user.let_annotation() -> int  [expr] {
  { let f: (x: int) -> int = (x: int) -> int { {  } x } } f(1)
}
function user.list_param(cbs: (value: int) -> int[]) -> int  [expr] {
  {  } 0
}
function user.nested_param(cb: ((value: int) -> int) -> int) -> int  [expr] {
  {  } cb((value: int) -> int { {  } value })
}
function user.optional_param(cb: (value: int) -> int?) -> int  [expr] {
  {  } 1
}
function user.returns_fn() -> (value: int) -> int  [expr] {
  {  } (value: int) -> int { {  } value }
}
class user.Callbacks {
  on_done: (value: int) -> int throws never
  on_skip: (value: int) -> int throws never?
}
type user.ExplicitAlias = (x: int) -> int throws never
type user.OpenAlias = (x: int) -> int throws unknown
function user.explicit_let() -> int  [expr] {
  { let f: (x: int) -> int throws never = (x: int) -> int { {  } x } } f(1)
}
function user.explicit_nested(cb: ((value: int) -> int throws never) -> int) -> int  [expr] {
  {  } cb((value: int) -> int { {  } value })
}
function user.explicit_return() -> (value: int) -> int throws never  [expr] {
  {  } (value: int) -> int { {  } value }
}
function user.immediate_callback(cb: (value: int) -> int) -> int  [expr] {
  {  } cb(1)
}
function user.lambda_explicit_callback() -> int  [expr] {
  { let apply = (f: (value: int) -> int throws never, x: int) -> int { {  } f(x) } } apply((value: int) -> int { {  } value }, 1)
}
