baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_type_missing_throws/baml_tests__diagnostic_errors__function_type_missing_throws__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 45294
---
=== PPIR ===
class user.Holder {
  cb: (value: int) -> int
  opt_cb: (value: int) -> int?
}
class user.Holder$stream {
  cb: unknown
  opt_cb: unknown | null
}
type user.Alias = (x: int) -> int
type user.Alias$stream = unknown
function user.lambda_param() -> int  [expr] {
  { let apply = (f: (value: int) -> int, x: int) -> int { {  } f(x) } } apply((value: int) -> int { {  } value }, 1)
}
function user.let_annotation() -> int  [expr] {
  { let f: (x: int) -> int = (x: int) -> int { {  } x } } f(1)
}
function user.list_param(cbs: (value: int) -> int[]) -> int  [expr] {
  {  } 0
}
function user.nested_param(cb: ((value: int) -> int) -> int) -> int  [expr] {
  {  } cb((value: int) -> int { {  } value })
}
function user.optional_param(cb: (value: int) -> int?) -> int  [expr] {
  {  } 1
}
function user.returns_fn() -> (value: int) -> int  [expr] {
  {  } (value: int) -> int { {  } value }
}
class user.Callbacks {
  on_done: (value: int) -> int throws never
  on_skip: (value: int) -> int throws never?
}
class user.Callbacks$stream {
  on_done: unknown
  on_skip: unknown | null
}
type user.ExplicitAlias = (x: int) -> int throws never
type user.ExplicitAlias$stream = unknown
type user.OpenAlias = (x: int) -> int throws unknown
type user.OpenAlias$stream = unknown
function user.explicit_let() -> int  [expr] {
  { let f: (x: int) -> int throws never = (x: int) -> int { {  } x } } f(1)
}
function user.explicit_nested(cb: ((value: int) -> int throws never) -> int) -> int  [expr] {
  {  } cb((value: int) -> int { {  } value })
}
function user.explicit_return() -> (value: int) -> int throws never  [expr] {
  {  } (value: int) -> int { {  } value }
}
function user.immediate_callback(cb: (value: int) -> int) -> int  [expr] {
  {  } cb(1)
}
function user.lambda_explicit_callback() -> int  [expr] {
  { let apply = (f: (value: int) -> int throws never, x: int) -> int { {  } f(x) } } apply((value: int) -> int { {  } value }, 1)
}
