baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_type_missing_throws/baml_tests__diagnostic_errors__function_type_missing_throws__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
type user.Alias = (x: int) -> int throws never
  !! 13..28: function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
class user.Holder {
  cb: (value: int) -> int throws never
  opt_cb: ((value: int) -> int throws never) | null
}
function user.let_annotation() -> int throws never {
  { : int
    let f: (x: int) -> int = : (x: int) -> int throws never
      (x: int) -> int { ... } : (x: int) -> int throws never
        {
          x
        }
    f(1) : int
  }
  !! 149..164: function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
}
lambda user.let_annotation {
}
function user.nested_param(cb: ((value: int) -> int throws never) -> int throws never) -> int throws never {
  { : int
    cb<__effect_param_0>((value: int) -> int { ... }) : int
      (value: int) -> int { ... } : (value: int) -> int throws never
        {
          value
        }
  }
  !! 226..254: function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
}
lambda user.nested_param {
}
function user.optional_param(cb: ((value: int) -> int throws never) | null) -> int throws never {
  { : 1
    1 : 1
  }
  !! 332..354: function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
}
function user.list_param(cbs: ((value: int) -> int throws never)[]) -> int throws never {
  { : 0
    0 : 0
  }
  !! 397..420: function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
}
function user.returns_fn() -> (value: int) -> int throws never throws never {
  { : (value: int) -> int throws never
    (value: int) -> int { ... } : (value: int) -> int throws never
      {
        value
      }
  }
  !! 463..482: function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
}
lambda user.returns_fn {
}
function user.lambda_param() -> int throws never {
  { : int
    let apply = : (f: (value: int) -> int throws never, x: int) -> int throws never
      (f: (value: int) -> int, x: int) -> int { ... } : (f: (value: int) -> int throws never, x: int) -> int throws never
        {
          f(x)
        }
    apply((value: int) -> int { ... }, 1) : int
      (value: int) -> int { ... } : (value: int) -> int throws never
        {
          value
        }
  }
  !! 571..590: function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
}
lambda user.lambda_param {
}
lambda user.lambda_param {
}
type user.Alias$stream = unknown
class user.Holder$stream {
  cb: unknown
  opt_cb: unknown | null
}
type user.ExplicitAlias = (x: int) -> int throws never
type user.OpenAlias = (x: int) -> int throws unknown
class user.Callbacks {
  on_done: (value: int) -> int throws never
  on_skip: ((value: int) -> int throws never) | null
}
function user.immediate_callback(cb: (value: int) -> int throws never) -> int throws never {
  { : int
    cb<__effect_param_0>(1) : int
  }
}
function user.lambda_explicit_callback() -> int throws never {
  { : int
    let apply = : (f: (value: int) -> int throws never, x: int) -> int throws never
      (f: (value: int) -> int throws never, x: int) -> int { ... } : (f: (value: int) -> int throws never, x: int) -> int throws never
        {
          f(x)
        }
    apply((value: int) -> int { ... }, 1) : int
      (value: int) -> int { ... } : (value: int) -> int throws never
        {
          value
        }
  }
}
lambda user.lambda_explicit_callback {
}
lambda user.lambda_explicit_callback {
}
function user.explicit_nested(cb: ((value: int) -> int throws never) -> int throws never) -> int throws never {
  { : int
    cb<__effect_param_0>((value: int) -> int { ... }) : int
      (value: int) -> int { ... } : (value: int) -> int throws never
        {
          value
        }
  }
}
lambda user.explicit_nested {
}
function user.explicit_let() -> int throws never {
  { : int
    let f: (x: int) -> int throws never = : (x: int) -> int throws never
      (x: int) -> int { ... } : (x: int) -> int throws never
        {
          x
        }
    f(1) : int
  }
}
lambda user.explicit_let {
}
function user.explicit_return() -> (value: int) -> int throws never throws never {
  { : (value: int) -> int throws never
    (value: int) -> int { ... } : (value: int) -> int throws never
      {
        value
      }
  }
}
lambda user.explicit_return {
}
type user.ExplicitAlias$stream = unknown
type user.OpenAlias$stream = unknown
class user.Callbacks$stream {
  on_done: unknown
  on_skip: unknown | null
}
