baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_type_missing_throws/baml_tests__diagnostic_errors__function_type_missing_throws__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] E0151

  × function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
   ╭─[negative.baml:1:14]
 1 │ type Alias = (x: int) -> int
   ·              ───────────────
   ╰────

  [type] E0151

  × function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
   ╭─[negative.baml:4:6]
 4 │   cb (value: int) -> int
   ·      ───────────────────
   ╰────

  [type] E0151

  × function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
   ╭─[negative.baml:5:10]
 5 │   opt_cb ((value: int) -> int)?
   ·          ──────────────────────
   ╰────

  [type] E0151

  × function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
   ╭─[negative.baml:9:10]
 9 │   let f: (x: int) -> int = (x: int) -> int { x };
   ·          ───────────────
   ╰────

  [type] E0151

  × function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
    ╭─[negative.baml:13:27]
 13 │ function nested_param(cb: ((value: int) -> int) -> int) -> int {
    ·                           ────────────────────────────
    ╰────

  [type] E0151

  × function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
    ╭─[negative.baml:17:29]
 17 │ function optional_param(cb: ((value: int) -> int)?) -> int {
    ·                             ──────────────────────
    ╰────

  [type] E0151

  × function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
    ╭─[negative.baml:21:26]
 21 │ function list_param(cbs: ((value: int) -> int)[]) -> int {
    ·                          ───────────────────────
    ╰────

  [type] E0151

  × function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
    ╭─[negative.baml:25:26]
 25 │ function returns_fn() -> (value: int) -> int {
    ·                          ───────────────────
    ╰────

  [type] E0151

  × function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
    ╭─[negative.baml:30:19]
 30 │   let apply = (f: (value: int) -> int, x: int) -> int { f(x) };
    ·                   ───────────────────
    ╰────

  [type] E0151

  × function type must declare an explicit `throws` clause; add `throws never` if calling it cannot throw
    ╭─[negative.baml:36:12]
 36 │     let f: (value: int) -> int => f(1)
    ·            ───────────────────
    ╰────
